[package]
name = "expansion"
version = "0.0.1"
authors = ["Hartmut"]
edition = "2021"

[dependencies]
serde = { version = "*", features = ["derive"] } # https://crates.io/crates/serde
serde_json = "*" # https://crates.io/crates/serde_json
csv = "1.1" # https://crates.io/crates/csv
chrono = {version = "0.4",  features = ["serde"]} # https://crates.io/crates/chrono
measurements = "*" # https://crates.io/crates/measurements
bevy-inspector-egui = "0.23" # https://crates.io/crates/bevy-inspector-egui
ron = "0.8" # https://crates.io/crates/ron
bevy_editor_pls = "0.8.0" # https://crates.io/crates/bevy_editor_pls
hifitime = { version = "3.9.0", features = ["std"] } # https://crates.io/crates/hifitime 
moonshine-save = "0.3.6"

[dependencies.bevy]
version = "0.13.0" # https://crates.io/crates/bevy
features = ["dynamic_linking","serialize", "wayland","jpeg"]

# Optional: Uncommenting the following improves compile times, but reduces the amount of debug info to 'line number tables only'
# In most cases the gains are negligible, but if you are on macos and have slow compile times you should see significant gains.
#[profile.dev]
#debug = 1