[package]
name = "expansion"
version = "0.0.1"
authors = ["Hartmut"]
edition = "2021"

[dependencies]
serde = { version = "*", features = ["derive"] } # https://crates.io/crates/serde
serde_json = "*" # https://crates.io/crates/serde_json
csv = "1.3" # https://crates.io/crates/csv
chrono = {version = "0.4",  features = ["serde"]} # https://crates.io/crates/chrono
measurements = "*" # https://crates.io/crates/measurements
bevy-inspector-egui = "0.28" # https://crates.io/crates/bevy-inspector-egui
bevy_editor_pls = "0.10" # https://crates.io/crates/bevy_editor_pls
ron = "0.8" # https://crates.io/crates/ron
hifitime = { version = "4.0.2", features = ["std"] } # https://crates.io/crates/hifitime 
moonshine-save = "0.3.10" # https://github.com/Zeenobit/moonshine_save

[dependencies.bevy]
version = "0.15" # https://crates.io/crates/bevy
features = ["dynamic_linking","serialize", "wayland"]
#"dynamic_linking","jpeg"